--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
 		<link rel="stylesheet" href="./css/style.css">
 		</head>
 	<body>
-		<div id="tabela">
+		<div id="table">
 			<div id="main-table">Dzisiejsze Kursy walut</div>
-			<div id="user-table">Kursy z data</div>
+			<div id="user-table">Kursy z dnia</div>
 		</div>
 		<form id="form1">
 			<input type="text" name="date" placeholder="RRRR-MM-DD"/>
